updated messages to match latest minimessage specifications
replacing <pre> with \

--- a/languages/language_en-US.json
+++ b/languages/language_en-US.json
@@ -176,7 +176,7 @@
     "help": {
         "title": "Screaming BedWars <version> - Help",
         "title_console": "Screaming BedWars <version> - Help for Console",
-        "bw_join": "/bw join <pre><arena></pre> - <green>Join the game",
+        "bw_join": "/bw join \\<arena> - <green>Join the game",
         "bw_leave": "/bw leave - <green>Leave the game",
         "bw_rejoin": "/bw rejoin - <green>Join again to latest game",
         "bw_autojoin": "/bw autojoin - <green>Join to first waiting game",
@@ -188,59 +188,59 @@
         "bw_addholo": "/bw addholo [leaderboard|stats]- <yellow>Adds hologram to the player's location",
         "bw_removeholo": "/bw removeholo - <yellow>After executing this command, the player can right-click the holographic statistic to remove it.",
         "bw_mainlobby": "/bw mainlobby [enable|set] - <yellow>Enables main lobby or sets main lobby location",
-        "bw_admin_info": "/bw admin <pre><arena></pre> info [section] - <yellow>Shows you all information about arena",
-        "bw_admin_add": "/bw admin <pre><arena></pre> add [variant] - <yellow>Create a new arena",
-        "bw_admin_lobby": "/bw admin <pre><arena></pre> lobby - <yellow>Sets lobby position to your position",
-        "bw_admin_spec": "/bw admin <pre><arena></pre> spec - <yellow>Sets specatator's spawn to your position",
-        "bw_admin_pos1": "/bw admin <pre><arena></pre> pos1 - <yellow>Sets the extreme point of the arena to your position",
-        "bw_admin_pos2": "/bw admin <pre><arena></pre> pos2 - <yellow>Sets the second extreme point of the arena to your position",
-        "bw_admin_lobby_pos1": "/bw admin <pre><arena></pre> lobbypos1 - <yellow>Sets the extreme point of the lobby to your position",
-        "bw_admin_lobby_pos2": "/bw admin <pre><arena></pre> lobbypos2 - <yellow>Sets the second extreme point of the lobby to your position",
-        "bw_admin_pausecountdown": "/bw admin <pre><arena></pre> pausecountdown <pre><seconds></pre> - <yellow>Sets the pause duration before game starts",
-        "bw_admin_minplayers": "/bw admin <pre><arena></pre> minplayers <pre><minimum></pre> - <yellow>Sets minimum of players needed to start the game",
-        "bw_admin_time": "/bw admin <pre><arena></pre> time <pre><seconds></pre> - <yellow>Sets the game's duration",
-        "bw_admin_team_add": "/bw admin <pre><arena></pre>team add <pre><team> <color> <max players></pre> - <yellow>Add a team to the game",
-        "bw_admin_team_color": "/bw admin <pre><arena></pre> team color <pre><team> <color></pre> - <yellow>Change team color",
-        "bw_admin_team_maxplayers": "/bw admin <pre><arena></pre> team maxplayers <pre><team> <max players></pre> - <yellow>Change max team players",
-        "bw_admin_team_spawn": "/bw admin <pre><arena></pre> team spawn <pre><team></pre> - <yellow>Sets team spawn to your position",
-        "bw_admin_team_bed": "/bw admin <pre><arena></pre> team bed <pre><team></pre> - <yellow>Sets team target block to your target position (it can be another block, not just bed)",
-        "bw_admin_jointeam": "/bw admin <pre><arena></pre> jointeam <pre><team></pre> - <yellow>Sets the ability to connect to a team using an entity",
-        "bw_admin_spawner_add": "/bw admin <pre><arena></pre> spawner add <pre><bronze|gold|iron> [hologram] [first level] [name] [team] [max spawned resources]</pre> - <yellow>Add item spawner to your position",
-        "bw_admin_spawner_max_spawned_resources": "/bw admin <pre><arena></pre> spawner maxSpawnedResources <pre><value></pre> - <yellow>Sets max spawned resources limit of the spawner at your position",
-        "bw_admin_spawner_rotation_mode": "/bw admin <pre><arena></pre> spawner rotationMode <pre><mode></pre> - <yellow>Sets the floating hologram's rotation mode of the spawner at your position",
-        "bw_admin_spawner_change_type": "/bw admin <pre><arena></pre> spawner changeType <pre><type></pre> - <yellow>Changes the type of the spawner at your position",
-        "bw_admin_spawner_custom_name": "/bw admin <pre><arena></pre> spawner customName <pre><name></pre> - <yellow>Sets the custom name of the spawner at your position",
-        "bw_admin_spawner_hologram_type": "/bw admin <pre><arena></pre> spawner hologramType <pre><type></pre> - <yellow>Sets the type of the spawner's hologram at your position",
-        "bw_admin_spawner_linked_team": "/bw admin <pre><arena></pre> spawner linkedTeam <pre><team|null></pre> - <yellow>Links the spawner at your position with the specified team",
-        "bw_admin_spawner_base_amount": "/bw admin <pre><arena></pre> spawner baseAmount <pre><amount></pre> - <yellow>Sets the base amount of resources that the spawner should spawn per cycle",
-        "bw_admin_spawner_hologram": "/bw admin <pre><arena></pre> spawner hologram <pre><true|false></pre> - <yellow>Enables/Disables hologram above the spawner",
-        "bw_admin_spawner_floating": "/bw admin <pre><arena></pre> spawner floating <pre><true|false></pre> - <yellow>Enables/Disables floating block under the spawner's hologram",
-        "bw_admin_spawner_reset": "/bw admin <pre><arena></pre> spawner reset - <yellow>Remove all spawners",
-        "bw_admin_store_add": "/bw admin <pre><arena></pre> store add [name above dealer head] [file with shop] [use main shop] - <yellow>Add trading villager to your position",
-        "bw_admin_store_remove": "/bw admin <pre><arena></pre> store remove - <yellow>Remove trading villager from your position",
-        "bw_admin_store_type": "/bw admin <pre><arena></pre> store type <pre><living entity></pre> - <yellow>Sets entity type of store (Villager, Horse, Cow, Pig etc.)",
-        "bw_admin_config": "/bw admin <pre><arena></pre> config <pre><constant> <value></pre> - <yellow>Sets value of constant variable for game",
-        "bw_admin_fee": "/bw admin <pre><arena></pre> fee <pre><fee></pre> - <yellow>Sets the economy fee needed to enter the arena.",
-        "bw_admin_arena_time": "/bw admin <pre><arena></pre> arenatime <pre><type></pre> - <yellow>Sets time in arena (DAY, NIGHT, etc.)",
-        "bw_admin_arena_weather": "/bw admin <pre><arena></pre> arenaweather <pre><type></pre> - <yellow>Sets weather in arena (default, CLEAN, DOWNFALL)",
-        "bw_admin_post_game_waiting": "/bw admin <pre><arena></pre> postgamewaiting <pre><seconds></pre> - <yellow>Sets the waiting time before player is teleported out of the arena",
-        "bw_admin_customprefix": "/bw admin <pre><arena></pre> customprefix <pre><name|off></pre> - <yellow>Enables custom prefix for arena",
-        "bw_admin_display_name": "/bw admin <pre><arena></pre> displayName <pre><name|off></pre> - <yellow>Sets display name of the arena",
-        "bw_admin_remove": "/bw admin <pre><arena></pre> remove - <red>Remove the arena",
-        "bw_admin_edit": "/bw admin <pre><arena></pre> edit - <yellow>Turns the game off and switches the arena to edit mode",
-        "bw_admin_save": "/bw admin <pre><arena></pre> save - <green>Saves the game and activates it!",
+        "bw_admin_info": "/bw admin \\<arena> info [section] - <yellow>Shows you all information about arena",
+        "bw_admin_add": "/bw admin \\<arena> add [variant] - <yellow>Create a new arena",
+        "bw_admin_lobby": "/bw admin \\<arena> lobby - <yellow>Sets lobby position to your position",
+        "bw_admin_spec": "/bw admin \\<arena> spec - <yellow>Sets specatator's spawn to your position",
+        "bw_admin_pos1": "/bw admin \\<arena> pos1 - <yellow>Sets the extreme point of the arena to your position",
+        "bw_admin_pos2": "/bw admin \\<arena> pos2 - <yellow>Sets the second extreme point of the arena to your position",
+        "bw_admin_lobby_pos1": "/bw admin \\<arena> lobbypos1 - <yellow>Sets the extreme point of the lobby to your position",
+        "bw_admin_lobby_pos2": "/bw admin \\<arena> lobbypos2 - <yellow>Sets the second extreme point of the lobby to your position",
+        "bw_admin_pausecountdown": "/bw admin \\<arena> pausecountdown \\<seconds> - <yellow>Sets the pause duration before game starts",
+        "bw_admin_minplayers": "/bw admin \\<arena> minplayers \\<minimum> - <yellow>Sets minimum of players needed to start the game",
+        "bw_admin_time": "/bw admin \\<arena> time \\<seconds> - <yellow>Sets the game's duration",
+        "bw_admin_team_add": "/bw admin \\<arena>team add \\<team> \\<color> \\<max players> - <yellow>Add a team to the game",
+        "bw_admin_team_color": "/bw admin \\<arena> team color \\<team> \\<color> - <yellow>Change team color",
+        "bw_admin_team_maxplayers": "/bw admin \\<arena> team maxplayers \\<team> \\<max players> - <yellow>Change max team players",
+        "bw_admin_team_spawn": "/bw admin \\<arena> team spawn \\<team> - <yellow>Sets team spawn to your position",
+        "bw_admin_team_bed": "/bw admin \\<arena> team bed \\<team> - <yellow>Sets team target block to your target position (it can be another block, not just bed)",
+        "bw_admin_jointeam": "/bw admin \\<arena> jointeam \\<team> - <yellow>Sets the ability to connect to a team using an entity",
+        "bw_admin_spawner_add": "/bw admin \\<arena> spawner add \\<bronze|gold|iron> [hologram] [first level] [name] [team] [max spawned resources] - <yellow>Add item spawner to your position",
+        "bw_admin_spawner_max_spawned_resources": "/bw admin \\<arena> spawner maxSpawnedResources \\<value> - <yellow>Sets max spawned resources limit of the spawner at your position",
+        "bw_admin_spawner_rotation_mode": "/bw admin \\<arena> spawner rotationMode \\<mode> - <yellow>Sets the floating hologram's rotation mode of the spawner at your position",
+        "bw_admin_spawner_change_type": "/bw admin \\<arena> spawner changeType \\<type> - <yellow>Changes the type of the spawner at your position",
+        "bw_admin_spawner_custom_name": "/bw admin \\<arena> spawner customName \\<name> - <yellow>Sets the custom name of the spawner at your position",
+        "bw_admin_spawner_hologram_type": "/bw admin \\<arena> spawner hologramType \\<type> - <yellow>Sets the type of the spawner's hologram at your position",
+        "bw_admin_spawner_linked_team": "/bw admin \\<arena> spawner linkedTeam \\<team|null> - <yellow>Links the spawner at your position with the specified team",
+        "bw_admin_spawner_base_amount": "/bw admin \\<arena> spawner baseAmount \\<amount> - <yellow>Sets the base amount of resources that the spawner should spawn per cycle",
+        "bw_admin_spawner_hologram": "/bw admin \\<arena> spawner hologram \\<true|false> - <yellow>Enables/Disables hologram above the spawner",
+        "bw_admin_spawner_floating": "/bw admin \\<arena> spawner floating \\<true|false> - <yellow>Enables/Disables floating block under the spawner's hologram",
+        "bw_admin_spawner_reset": "/bw admin \\<arena> spawner reset - <yellow>Remove all spawners",
+        "bw_admin_store_add": "/bw admin \\<arena> store add [name above dealer head] [file with shop] [use main shop] - <yellow>Add trading villager to your position",
+        "bw_admin_store_remove": "/bw admin \\<arena> store remove - <yellow>Remove trading villager from your position",
+        "bw_admin_store_type": "/bw admin \\<arena> store type \\<living entity> - <yellow>Sets entity type of store (Villager, Horse, Cow, Pig etc.)",
+        "bw_admin_config": "/bw admin \\<arena> config \\<constant> \\<value> - <yellow>Sets value of constant variable for game",
+        "bw_admin_fee": "/bw admin \\<arena> fee \\<fee> - <yellow>Sets the economy fee needed to enter the arena.",
+        "bw_admin_arena_time": "/bw admin \\<arena> arenatime \\<type> - <yellow>Sets time in arena (DAY, NIGHT, etc.)",
+        "bw_admin_arena_weather": "/bw admin \\<arena> arenaweather \\<type> - <yellow>Sets weather in arena (default, CLEAN, DOWNFALL)",
+        "bw_admin_post_game_waiting": "/bw admin \\<arena> postgamewaiting \\<seconds> - <yellow>Sets the waiting time before player is teleported out of the arena",
+        "bw_admin_customprefix": "/bw admin \\<arena> customprefix \\<name|off> - <yellow>Enables custom prefix for arena",
+        "bw_admin_display_name": "/bw admin \\<arena> displayName \\<name|off> - <yellow>Sets display name of the arena",
+        "bw_admin_remove": "/bw admin \\<arena> remove - <red>Remove the arena",
+        "bw_admin_edit": "/bw admin \\<arena> edit - <yellow>Turns the game off and switches the arena to edit mode",
+        "bw_admin_save": "/bw admin \\<arena> save - <green>Saves the game and activates it!",
         "bw_alljoin": "/bw alljoin [arena] - <green>Joins all players on the server to bedwars game",
-        "bw_admin_spawner_remove": "/bw admin <pre><arena></pre> spawner remove - <yellow>Removes all spawners at location",
-        "bw_admin_store_child": "/bw admin <pre><arena></pre> store child - <yellow>Mark this shopkeeper as child",
-        "bw_admin_store_adult": "/bw admin <pre><arena></pre> store adult - <yellow>Mark this shopkeeper as adult",
-        "bw_migrate": "/bw migrate <pre><plugin></pre> - <yellow>Migrates the configuration from a different BedWars plugin.",
+        "bw_admin_spawner_remove": "/bw admin \\<arena> spawner remove - <yellow>Removes all spawners at location",
+        "bw_admin_store_child": "/bw admin \\<arena> store child - <yellow>Mark this shopkeeper as child",
+        "bw_admin_store_adult": "/bw admin \\<arena> store adult - <yellow>Mark this shopkeeper as adult",
+        "bw_migrate": "/bw migrate \\<plugin> - <yellow>Migrates the configuration from a different BedWars plugin.",
         "bw_dump": "/bw dump - <yellow>Dumps the server and gives you link to the dump. This link can be useful for support",
-        "bw_admin_interactive": "/bw admin <pre><arena></pre> interactive - <yellow>If arena is in edit mode, this command will enable interactive mode",
-        "bw_cheat_give": "/bw cheat give <pre><resource></pre> [amount] [player] - <red>Gives player specified amount of resource",
+        "bw_admin_interactive": "/bw admin \\<arena> interactive - <yellow>If arena is in edit mode, this command will enable interactive mode",
+        "bw_cheat_give": "/bw cheat give \\<resource> [amount] [player] - <red>Gives player specified amount of resource",
         "bw_cheat_kill": "/bw cheat kill [player] - <red>Kills specified player",
         "bw_cheat_build_pop_up_tower": "/bw cheat buildPopUpTower [game] - <red>Builds popup tower",
         "bw_cheat_rebuild_region": "/bw cheat rebuildRegion [game] - <red>Rebuilds the game region",
-        "bw_gamesinv": "/bw gamesinv <pre><inventory></pre> - <green>Opens the specific games inventory"
+        "bw_gamesinv": "/bw gamesinv \\<inventory> - <green>Opens the specific games inventory"
     },
     "games_inventory": {
         "could_not_find_game": "<red>Could not find a game!",
@@ -257,12 +257,12 @@
         ]
     },
     "admin": {
-        "usage": "<red>Usage: /bw admin <pre><arena> <add|edit|remove|save|...> ...</pre>",
+        "usage": "<red>Usage: /bw admin \\<arena> \\<add|edit|remove|save|...> ...",
         "arena": {
             "error": {
                 "already_exists": "<red>Arena already exists!",
                 "already_working_on_it": "<red>Arena already exists but isn't finished!",
-                "arena_not_in_edit": "<red>Arena doesn't exist or is running! Deactivate it with <gray>/bw admin <pre><arena></pre> edit<red> and then activate it with <gray>/bw admin <pre><arena></pre> save",
+                "arena_not_in_edit": "<red>Arena doesn't exist or is running! Deactivate it with <gray>/bw admin \\<arena> edit<red> and then activate it with <gray>/bw admin \\<arena> save",
                 "arena_must_be_in_edit_mode": "<red>Arena must be in edit mode!"
             },
             "success": {
@@ -514,7 +514,7 @@
         "failed": "<red>Dump failed!"
     },
     "language": {
-        "usage_bw_lang": "Usage: /bw lang <pre><locale></pre> - <yellow>Sets the locale to be used by <red>Bed<white>Wars",
+        "usage_bw_lang": "Usage: /bw lang \\<locale> - <yellow>Sets the locale to be used by <red>Bed<white>Wars",
         "invalid": "<red>The specified language file could not be loaded!",
         "already_set": "Language: [<lang>] is already set as the default language!",
         "success": "<green>Successfully set language to <white>[<lang>]"
