--- a/languages/language_en-US.json
+++ b/languages/language_en-US.json
@@ -103,6 +103,7 @@
             "full": "<red><bold>Spawner is depleted",
             "full_hypixel": "<red><bold>Spawner is full!",
             "not_enough_level": "<red>Spawner can't work! You need to upgrade by <levels> levels.",
+            "reached_maximum_level": "<red>Spawner has reached its maximum level!",
             "tier": "<yellow>Tier <red><tier>",
             "countdown_hypixel": "<yellow>Spawns in <red><seconds> <yellow>seconds",
             "countdown_custom_hypixel": "<yellow>Spawns in <red><value> <yellow><unit>"
@@ -123,7 +124,9 @@
             "price": "Price:",
             "amount": "Amount:",
             "buy_success": "<green>Successfully purchased <gray><item><green> for <gray><material><green>!",
-            "buy_failed": "<red>Lack of material to buy <gray><item><red>! Needed <gray><material><red>!"
+            "buy_failed": "<red>Lack of material to buy <gray><item><red>! Needed <gray><material><red>!",
+            "upgrade_success": "<green><name> has successfully upgraded <spawner> to level <level>!",
+            "upgrade_translate": "upgrade"
         },
         "team_selection": {
             "inventory_name": "Select team - <arena>",
