--- a/languages/language_en-US.json
+++ b/languages/language_en-US.json
@@ -263,7 +263,8 @@
         "bw_admin_store_add": "/bw admin \\<arena> store add [name above dealer head] [file with shop] [use main shop] - <yellow>Add trading villager to your position",
         "bw_admin_store_remove": "/bw admin \\<arena> store remove - <yellow>Remove trading villager from your position",
         "bw_admin_store_type": "/bw admin \\<arena> store type \\<living entity> - <yellow>Sets entity type of store (Villager, Horse, Cow, Pig etc.)",
-        "bw_admin_config": "/bw admin \\<arena> config \\<constant> \\<value> - <yellow>Sets value of constant variable for game",
+        "bw_admin_config_set": "/bw admin \\<arena> config \\set \\<data type> \\<constant> \\<value> - <yellow>Sets value of constant variable for game",
+        "bw_admin_config_reset": "/bw admin \\<arena> config \\reset \\<constant> - <yellow>Resets constant to the inherited value",
         "bw_admin_fee": "/bw admin \\<arena> fee \\<fee> - <yellow>Sets the economy fee needed to enter the arena.",
         "bw_admin_arena_time": "/bw admin \\<arena> arenatime \\<type> - <yellow>Sets time in arena (DAY, NIGHT, etc.)",
         "bw_admin_arena_weather": "/bw admin \\<arena> arenaweather \\<type> - <yellow>Sets weather in arena (default, CLEAN, DOWNFALL)",
@@ -377,6 +378,7 @@
                     "game_time_set": "<green>Game time was set to <gray><time>",
                     "min_players_set": "<green>Successfully set minimum players to <gray><min><green>!",
                     "constant_set": "<green>Constant <gray><config><green> was successfully set to <gray><value><green>!",
+                    "constant_reset": "<green>Constant <gray><config><green> was successfully reset to the inherited value!",
                     "arena_time_set": "<green>Arena's world time has been set to <gray><time><green>!",
                     "weather_set": "<green>Arena's world weather has been set to <gray><weather><green>!",
                     "bar_color_set": "<green>Color set to <gray><color><green> for bossbar <gray><type><green>!",
