--- a/languages/language_en-US.json
+++ b/languages/language_en-US.json
@@ -263,8 +263,12 @@
         "bw_admin_store_add": "/bw admin \\<arena> store add [name above dealer head] [file with shop] [use main shop] - <yellow>Add trading villager to your position",
         "bw_admin_store_remove": "/bw admin \\<arena> store remove - <yellow>Remove trading villager from your position",
         "bw_admin_store_type": "/bw admin \\<arena> store type \\<living entity> - <yellow>Sets entity type of store (Villager, Horse, Cow, Pig etc.)",
-        "bw_admin_config_set": "/bw admin \\<arena> config \\set \\<data type> \\<constant> \\<value> - <yellow>Sets value of constant variable for game",
-        "bw_admin_config_reset": "/bw admin \\<arena> config \\reset \\<constant> - <yellow>Resets constant to the inherited value",
+        "bw_admin_config_set": "/bw admin \\<arena> config set \\<data type> \\<constant> \\<value> - <yellow>Sets value of a constant for a game",
+        "bw_admin_config_reset": "/bw admin \\<arena> config reset \\<constant> - <yellow>Resets a constant to the inherited value",
+        "bw_admin_config_list_add": "/bw admin \\<arena> config list \\<data type> \\<constant> add \\<value> - <yellow>Adds new value to the list of constants",
+        "bw_admin_config_list_set": "/bw admin \\<arena> config list \\<data type> \\<constant> set \\<position> \\<value> - <yellow>Changes value at the position to the list of constants",
+        "bw_admin_config_list_remove": "/bw admin \\<arena> config list \\<data type> \\<constant> remove \\<position> - <yellow>Removes value from the position in the list of constants",
+        "bw_admin_config_list_clear": "/bw admin \\<arena> config list \\<data type> \\<constant> clear - <yellow>Clears the list of constants without setting it to inherit",
         "bw_admin_fee": "/bw admin \\<arena> fee \\<fee> - <yellow>Sets the economy fee needed to enter the arena.",
         "bw_admin_arena_time": "/bw admin \\<arena> arenatime \\<type> - <yellow>Sets time in arena (DAY, NIGHT, etc.)",
         "bw_admin_arena_weather": "/bw admin \\<arena> arenaweather \\<type> - <yellow>Sets weather in arena (default, CLEAN, DOWNFALL)",
@@ -343,6 +347,7 @@
                     "invalid_min_players": "<red>Minimum players must be 2 or higher!",
                     "invalid_constant_value": "<red>Wrong value! It could be <gray>true<red>, <gray>false<red> or <gray>inherit<red>!",
                     "invalid_constant_name": "<red>Wrong name of constant!",
+                    "invalid_constant_position": "<red>Wrong position of constant list's member!",
                     "invalid_arena_time": "<red>Wrong type of arena's world time!",
                     "invalid_arena_weather": "<red>Wrong type of arena's world weather!",
                     "invalid_bar_color": "<red>Wrong color for Boss Bar!",
@@ -378,6 +383,9 @@
                     "game_time_set": "<green>Game time was set to <gray><time>",
                     "min_players_set": "<green>Successfully set minimum players to <gray><min><green>!",
                     "constant_set": "<green>Constant <gray><config><green> was successfully set to <gray><value><green>!",
+                    "constant_list_added": "<green>Value <gray><value><green> has been successfully added to the <gray><config><green> list at position <gray><position><green>!",
+                    "constant_list_removed": "<green>Value at the position <gray><position><green> has been removed from the <gray><config><green> list!",
+                    "constant_list_cleared": "<green>List <gray><config><green> is now empty, but does not fallback to the inherited one!",
                     "constant_reset": "<green>Constant <gray><config><green> was successfully reset to the inherited value!",
                     "arena_time_set": "<green>Arena's world time has been set to <gray><time><green>!",
                     "weather_set": "<green>Arena's world weather has been set to <gray><weather><green>!",
