--- a/languages/language_en-US.json
+++ b/languages/language_en-US.json
@@ -351,6 +351,7 @@
                     "spawners_needed": "<red>The game must have at least one item spawner!",
                     "team_does_not_exist": "<red>This team doesn't exist!",
                     "team_already_exists": "<red>This team already exists!",
+                    "cannot_rename_team": "<red>Cannot rename team <gray><team><red> to <gray><new-team><red>! This name is already taken!",
                     "set_bounds_before_save": "<red>Before saving the game please set the pos1 and pos2 coordinates (Determining the size and position of the arena)!",
                     "set_lobby_before_save": "<red>Before saving the game please set lobby spawn!",
                     "set_spec_before_save": "<red>Before saving the game please set spec spawn!",
@@ -358,6 +359,10 @@
                     "set_spawners_before_save": "<red>Before saving the game please add at least 1 spawner!",
                     "set_target_block_for_team_before_save": "<red>Before saving the game please set target block of team <gray><team><red>!",
                     "set_spawn_for_team_before_save": "<red>Before saving the game please set spawn of team <gray><team><red>!",
+                    "missing_spawners": "<yellow>There are no spawners in the game.",
+                    "missing_stores": "<yellow>There are no stores in the game.",
+                    "weird_store_count": "<yellow>There number of stores in this game is <gray><count><yellow> which is not a multiplier of the team count. Is this correct?",
+                    "skip_warnings": "<yellow>If you want to save <gray><game><yellow> anyways, please execute this command: <gray><command>",
                     "invalid_min_players": "<red>Minimum players must be 2 or higher!",
                     "invalid_constant_value": "<red>Wrong value! It could be <gray>true<red>, <gray>false<red> or <gray>inherit<red>!",
                     "invalid_constant_name": "<red>Wrong name of constant!",
@@ -384,10 +389,15 @@
                     "team_color_set": "<green>Color of <gray><team><green> was successfully set to <teamcolor>",
                     "team_removed": "<green>Team <gray><team><green> was successfully removed!",
                     "team_created": "<green>Team <gray><team><green> was successfully created with color <teamcolor><green> and maximal player count: <gray><maxplayers>",
+                    "team_renamed": "<green>Team <gray><team><green> was successfully renamed to <gray><new-team><green>!",
                     "spawners_removed": "<green>All spawners for game <gray><arena><green> were removed!",
                     "spawner_added": "<green>Spawner <gray><resource><green> was successfully added to position XYZ: <gray><x>/<y>/<z>",
                     "store_added": "<green>A store was added to your position: <gray><x>/<y>/<z> <green>YAW: <gray><yaw> <green>PITCH: <gray><pitch>",
-                    "store_removed": "<green>Villager from position XYZ: <gray><x>/<y>/<z><green> was successfully removed!",
+                    "store_removed": "<green>Store from position XYZ: <gray><x>/<y>/<z><green> was successfully removed!",
+                    "store_name_set": "<green>Name of the store at position XYZ: <gray><x>/<y>/<z><green> is now <gray><name><green>!",
+                    "store_name_reset": "<green>The store at position XYZ: <gray><x>/<y>/<z><green> no longer has custom name!",
+                    "store_file_set": "<green>File of the store at position XYZ: <gray><x>/<y>/<z><green> is now <gray><file><green>!",
+                    "store_file_reset": "<green>The store at position XYZ: <gray><x>/<y>/<z><green> no longer has custom file!",
                     "lobby_spawn_set": "<green>Lobby spawn was successfully set to position XYZ: <gray><x>/<y>/<z> <green>YAW: <gray><yaw> <green>PITCH: <gray><pitch>",
                     "spec_spawn_set": "<green>Spectator spawn was successfully set to position XYZ: <gray><x>/<y>/<z> <green>YAW: <gray><yaw> <green>PITCH: <gray><pitch>",
                     "pos1_set": "<green>Position 1 of arena <gray><arena><green> was set to XYZ: <gray><x>/<y>/<z>",
