--- a/languages/language_en-US.json
+++ b/languages/language_en-US.json
@@ -379,12 +379,21 @@
                         "first_line": "<red>There are more spawners in the same place, please choose a specific one:",
                         "line": "- <type> - <gray><command></gray>"
                     },
-                    "invalid_variant": "<red>Game variant <gray><variant><red> does not exist!"
+                    "invalid_variant": "<red>Game variant <gray><variant><red> does not exist!",
+                    "team_spawn_set_blocked": "<red>The team <gray><team><red> has more than one spawnpoint, so using set command is not allowed.",
+                    "team_spawn_on_the_same_block": "<red>There is already a spawnpoint at this position. If you want to change the rotation, remove it first."
                 },
                 "success": {
                     "saved_and_started": "<green>The game has been successfully saved and is running! Now you can join and play in the arena!",
                     "target_block_set": "<green>Target block (<gray><material><green>) of team <gray><team><green> was successfully set to position XYZ: <gray><x>/<y>/<z>",
                     "team_spawn_set": "<green>Spawn of team <gray><team><green> was successfully set to position XYZ: <gray><x>/<y>/<z> <green>YAW: <gray><yaw> <green>PITCH: <gray><pitch>",
+                    "team_multiple_spawns_ad": "<blue>Do you want to setup more than one spawnpoint for a team? Use <gray><command>",
+                    "team_spawn_added": "<green>Spawn of team <gray><team><green> has been successfully added to position XYZ: <gray><x>/<y>/<z> <green>YAW: <gray><yaw> <green>PITCH: <gray><pitch>",
+                    "team_spawn_removed": "<green>Spawn of team <gray><team><green> has been successfully removed from position XYZ: <gray><x>/<y>/<z>",
+                    "team_spawn_reset": "<green>All spawns of team <gray><team><green> has been removed.",
+                    "team_spawn_list": "<green>The team <gray><team><green> has <gray><count><green> spawnpoints at these positions:",
+                    "team_spawn_list_entry": "<gray><x>/<y>/<z> <green>YAW: <gray><yaw> <green>PITCH: <gray><pitch>",
+                    "team_spawn_list_no": "<red>The team <gray><team><red> has no spawnpoints yet.",
                     "team_maxplayers_set": "<green>Maximal count of players in team <gray><team><green> was successfully set to <gray><maxplayers>",
                     "team_color_set": "<green>Color of <gray><team><green> was successfully set to <teamcolor>",
                     "team_removed": "<green>Team <gray><team><green> was successfully removed!",
